<resources>
    <string name="app_name">Afupeo</string>
    <string name="navigation_drawer_open">Ouvrir le menu de Naviguation</string>
    <string name="navigation_drawer_close">Fermer le menu de Naviguation</string>
    <string name="nav_header_title">Afupeo</string>
    <string name="nav_header_subtitle">Expaceo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_search">Recherche</string>
    <string name="nav_search_income">Encaissement</string>
    <string name="nav_search_outcome">Décaissement</string>
    <string name="nav_header_input">Saisie</string>
    <string name="nav_input_income">Encaissement</string>
    <string name="nav_input_outcome">Décaissement</string>
    <string name="nav_header_other">Autre</string>
    <string name="nav_budget">Budget</string>
    <string name="nav_rapprochement">Rapprochement</string>
    <string name="nav_reporting">Reporting</string>
    <string name="action_settings">Compte</string>
    <string name="title_activity_get_encaissement">GetEncaissementActivity</string>
    <string name="large_text"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>